--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "node": ">= 16.13 <17"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "~27.5",
     "@types/node": "~16",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "~5.26",
     "@typescript-eslint/parser": "~5.26",
     "eslint": "~8.16",
@@ -18,10 +20,12 @@
     "prettier": "~2.6",
     "rimraf": "~3.0",
     "ts-jest": "~28.0",
+    "tsc-watch": "^5.0.3",
     "tsutils": "~3.21",
     "typescript": "~4.7"
   },
   "scripts": {
+    "dev": "tsc-watch --onSuccess \"node build/src/main.js\"",
     "start": "node build/src/main.js",
     "clean": "rimraf coverage build tmp",
     "prebuild": "npm run lint",
@@ -36,7 +40,9 @@
   "author": "Jakub Synowiec <jsynowiec@users.noreply.github.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "tslib": "~2.4"
+    "express": "^4.18.1",
+    "tslib": "~2.4",
+    "uuid": "^8.3.2"
   },
   "volta": {
     "node": "16.13.0"
