--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": ">= 16.13 <17"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "~27.5",
     "@types/node": "~16",
@@ -40,6 +41,7 @@
   "author": "Jakub Synowiec <jsynowiec@users.noreply.github.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "tslib": "~2.4",
     "uuid": "^8.3.2"
